# glsl-compute-shader-sandbox

./: .gitignore
include/gcss/: camera.h
sandbox/: CMakeLists.txt
sandbox/n-body-barnes-hut-cuda/: README.md  build.sh
sandbox/n-body-c/: build.sh  pnbody.c
sandbox/n-body-life/: CMakeLists.txt
sandbox/n-body-life/shaders/: clear.frag  clear.vert  render-particles.frag  render-particles.vert
sandbox/n-body-life/shaders/n-body/: init-particles.comp  update-particles.comp
sandbox/n-body-life/src/: main.cpp  particles.h  renderer.h
